--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -5,13 +5,6 @@ header{
     border-radius: 100%;
 }
 
-.container-red{
-    background-color: red;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-}
-
 .btn-login{
     background-color: red;
 }
@@ -28,19 +21,35 @@ header{
     margin-left: 20px;
 }
 
-footer p{
-    font-size: 10px;
+.container-red{
+    background-color: red;
+    width: 100%;
 }
-.footer{
+
+.footer-p{
+    font-size: 12px;
+    margin-left: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+}
+.p-footer{
     font-size: 15px;
     font-weight: 600;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+.img-card{
+    margin-left: 10px;
+    margin-bottom: 15px;
 }
 
 .img-redes{
-    margin-top: 20px;
+    margin-left: 10px;
+    margin-bottom: 15px;
 }
 
 .col{
-    margin-bottom: 15px;
-    margin-top: 15px;
+    text-align: center;
 }
